MMA-6634: Forbedringer etter PR - Ikke hent duplikate distribusjoner ved spørring etter uekspederte forsendelser - Legg til test av HentUekspederteForsendelserMapper
Co-authored-by: Anders Opskar Voldsund <anders.voldsund@nav.no>